<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/pls"
        android:textSize="20sp"/>

   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
       
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:background="@color/darkblue">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/pls"
               android:textSize="17sp"
               android:textColor="@color/white"
               android:layout_marginTop="20dp"
               android:layout_marginLeft="30dp"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:paddingTop="20dp"
               android:layout_marginLeft="20dp">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_weight="2">

                   <ImageButton
                       android:layout_width="match_parent"
                       android:background="@drawable/picbackg"
                       android:layout_height="match_parent"
                       android:src="@drawable/maleperson"
                       />

               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_weight="1">
                   <EditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:backgroundTint="@color/white"
                       android:hint="@string/FN"
                       android:textColor="@color/white"
                       android:textSize="20sp"
                       android:layout_marginRight="55dp"
                       android:layout_marginLeft="10dp"
                       android:layout_marginTop="20dp"
                       android:textColorHint="@color/white"/>
                   <EditText
                       android:hint="@string/SN"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:backgroundTint="@color/white"
                       android:textColor="@color/white"
                       android:textSize="20sp"
                       android:layout_marginRight="55dp"
                       android:layout_marginLeft="10dp"
                       android:layout_marginTop="20dp"
                       android:textColorHint="@color/white"/>

               </LinearLayout>
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:paddingLeft="30dp"
               android:paddingRight="55dp">


               <EditText

                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:backgroundTint="@color/white"
                   android:drawablePadding="10dp"
                   android:drawableLeft="@drawable/person"
                   android:textColor="@color/white"
                   android:hint="@string/choose"
                   android:textSize="20sp"
                   android:layout_marginTop="20dp"
                   android:textColorHint="@color/white"/>

               <RadioGroup
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:paddingTop="20dp"

                   >


                       <RadioButton
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:text="@string/male"
                           android:buttonTint="@color/white"
                           android:textSize="20sp"
                           android:textColor="@color/white"/>




                       <RadioButton
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:buttonTint="@color/white"
                           android:layout_weight="1"
                           android:text="@string/fem"
                           android:textSize="20sp"
                           android:textColor="@color/white"/>

               </RadioGroup>

               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:backgroundTint="@color/white"
                   android:textColor="@color/white"
                   android:hint="@string/bday"
                   android:textColorHint="@color/white"
                   android:inputType="date"
                   android:layout_marginTop="20dp"
                   android:textSize="20sp"
                   android:drawableLeft="@drawable/gift"
                   android:drawablePadding="10dp"/>

               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:backgroundTint="@color/white"
                   android:hint="@string/loc"
                   android:textColorHint="@color/white"
                   android:textSize="20sp"
                   android:drawableLeft="@drawable/location"
                   android:layout_marginTop="20dp"
                   android:drawablePadding="10dp"/>
           </LinearLayout>

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/con"
               android:textColor="@color/white"
               android:layout_marginTop="30dp"
               android:background="@color/lblue"
               android:layout_marginHorizontal="20dp"
               />

       </LinearLayout>

   </android.support.v7.widget.CardView>
   

</RelativeLayout>

    